# tap-prometheus

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  example_config.json  pyproject.toml
.circleci/: config.yml
dev/: install-tools.sh
src/core/: main.py
tap_prometheus/: __init__.py  prometheus_client.py
tests/: test_tap.py
