[tool.poetry]
name = "tap-prometheus"
version = "0.0.1"
description = "Singer tap that extracts data from Prometheus using queries provided in config and produces JSON-formatted data following the [Singer spec](https://github.com/singer-io/getting-started/blob/master/docs/SPEC.md)."
authors = ["Signal AI"]
repository = "https://github.com/signal-ai/tap-prometheus"
homepage = "https://github.com/signal-ai/tap-prometheus"
packages = [ { include="tap_prometheus" } ]

[tool.poetry.scripts]
tap-prometheus = "tap_prometheus:main"

[tool.poetry.dependencies]
python = ">=3.8.0,<4.0.0"
singer-python = "5.12.2"
requests = "^2.28.1"
urllib3 = "^1.26.12"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-httpserver = "^1.0.6"
pre-commit = "^2.20.0"
ruff = "^0.14.3"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
indent-width = 4

target-version = "py312"

[tool.ruff.lint]
select = [
  "E4",
  "E7",
  "E9",
  "INP001", # flake8-no-pep420 (INP)
  "F", # pyflakes https://docs.astral.sh/ruff/rules/#pyflakes-f
  "B", # flake8bugbear
  "UP", # pyupgrade https://docs.astral.sh/ruff/rules/#pyupgrade-up
  "I", # isort https://docs.astral.sh/ruff/rules/#isort-i
  "F", # fastapi https://docs.astral.sh/ruff/rules/#fastapi-fast
  "RUF", # ruff https://docs.astral.sh/ruff/rules/#ruff-specific-rules-ruf
  "FURB", # refurb https://docs.astral.sh/ruff/rules/#refurb-furb,
  "S", # flake8-bandit https://docs.astral.sh/ruff/rules/#flake8-bandit-s
]

[tool.ruff.lint.extend-per-file-ignores]
"test/*.py" = ["S101", "S105", "RUF001"]
"test_*.py" = ["S101", "S105", "RUF001"]
"conftest.py" = ["S101", "S105", "RUF001"]
